# hysj

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  Hysj.sln  README.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  THREAT_MODEL.md  app_out.txt  checklog.ps1  client_out.txt  docker-compose.yml  index.html  pressf5.ps1  showwin.ps1  skills-lock.json  test_api.sh  vercel.json
.agents/: api-dev.md  crypto-auditor.md  db-architect.md  deployer.md  flutter-ui.md  orchestrator.md  security-hardener.md  test-runner.md
.claude/: settings.local.json
.claude/.agents/: TEAM_GUIDE.md  TEAM_REPORT.md  package.json  team-session.js
.claude/agents/: hysj-team-orchestrator.md
.github/workflows/: ci.yml
app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/models/: ws_message.dart
app/lib/screens/: calls_screen.dart  chat_list_screen.dart  conversation_screen.dart  home_shell.dart  incoming_call_screen.dart  login_screen.dart  menu_overlay_screen.dart  otp_screen.dart  profile_screen.dart  register_screen.dart  video_call_screen.dart
app/lib/services/: api_client.dart  auth_service.dart  chat_service.dart  crypto_service.dart  local_storage.dart  notification_service.dart  ws_client.dart
app/lib/theme/: app_theme.dart  hysj_theme.dart
app/lib/widgets/: audio_player_bubble.dart  audio_recorder_button.dart  avatar_circle.dart  bottom_nav.dart  hysj_avatar.dart  hysj_button.dart  hysj_icon_button.dart  hysj_input.dart  menu_row.dart  pill_chip.dart  voice_type_picker.dart
app/test/: widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc  main.cpp
client/Hysj.Client/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  Hysj.Client.csproj  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs
client/Hysj.Client/Converters/: StringNotEmptyConverter.cs
client/Hysj.Client/Crypto/: AesGcmCipher.cs  EccKeyPair.cs  HkdfDeriver.cs
client/Hysj.Client/Models/: Contact.cs  Conversation.cs  DeviceInfo.cs  Group.cs  Message.cs  WipeCommand.cs
client/Hysj.Client/Services/: ApiService.cs  AuthStateService.cs  ChatService.cs  CryptoService.cs  IApiService.cs  IAuthStateService.cs  IChatService.cs  ICryptoService.cs  IKeyManager.cs  ILocalDbService.cs  ILocalizationService.cs  IWipeService.cs  KeyManager.cs  LocalDbService.cs  LocalizationService.cs  WipeService.cs
client/Hysj.Client/ViewModels/: ChatViewModel.cs  ConversationListViewModel.cs  CreateGroupViewModel.cs  LanguageSelectionViewModel.cs  LoginViewModel.cs  RegisterViewModel.cs  SecurityViewModel.cs  SettingsViewModel.cs
client/Hysj.Client/Views/: ChatPage.xaml  ChatPage.xaml.cs  ConversationListPage.xaml  ConversationListPage.xaml.cs  CreateGroupPage.xaml  CreateGroupPage.xaml.cs  LanguageSelectionPage.xaml  LanguageSelectionPage.xaml.cs  LoginPage.xaml  LoginPage.xaml.cs  RegisterPage.xaml  RegisterPage.xaml.cs  SecurityPage.xaml  SecurityPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs
crates/hysj-api/: Cargo.toml
crates/hysj-api/src/: config.rs  error.rs  main.rs  state.rs
crates/hysj-api/src/background/: message_expiry.rs  mod.rs  rate_limit_cleanup.rs  wipe_pending.rs
crates/hysj-api/src/middleware/: auth.rs  rate_limit.rs
crates/hysj-api/src/routes/: audio.rs  auth.rs  contact_requests.rs  contacts.rs  devices.rs  emojis.rs  files.rs  groups.rs  keys.rs  mod.rs  otp.rs  push.rs  relay.rs  settings.rs  status.rs  vpn.rs  wipe.rs
crates/hysj-api/src/ws/: connection_tracker.rs  handler.rs  mod.rs
crates/hysj-auth/: Cargo.toml
crates/hysj-auth/src/: certificate.rs  jwt.rs  lib.rs  password.rs  totp.rs
crates/hysj-crypto/: Cargo.toml
crates/hysj-crypto/src/: cipher.rs  kdf.rs  keys.rs  lib.rs  onion.rs  postquantum.rs  sealed.rs  x3dh.rs
crates/hysj-crypto/src/ratchet/: chain.rs  double_ratchet.rs  header.rs  mod.rs  skipped.rs
crates/hysj-db/: Cargo.toml
crates/hysj-db/src/: contact_requests.rs  contacts.rs  devices.rs  emojis.rs  groups.rs  keys.rs  lib.rs  models.rs  (+6 more)
crates/hysj-messaging/: Cargo.toml
crates/hysj-messaging/src/: lib.rs  media_store.rs  otp.rs  queue.rs  wipe.rs
crates/hysj-shared/: Cargo.toml
crates/hysj-vpn/: Cargo.toml
crates/hysj-vpn/src/: config.rs  keys.rs  lib.rs  session.rs
hysj-app/: App.tsx  CLAUDE.md  DESIGN.md  app.json  package-lock.json  package.json
migrations/: 001_initial.sql  002_ux_features.sql  003_avatars_status.sql  004_relay_nodes.sql
native/: Cargo.toml
native/src/: api.rs  lib.rs
preview/: index.html
src/Hysj.Api/: Hysj.Api.csproj  Hysj.Api.http  Program.cs  appsettings.Development.json.example  appsettings.json  hysj_dev.db  hysj_dev.db-shm  hysj_dev.db-wal
src/Hysj.Shared/: Class1.cs
tests/Hysj.Api.Tests/: ExpiryTests.cs  Hysj.Api.Tests.csproj  MessageQueueTests.cs  RateLimitTests.cs  WipeServiceTests.cs
tests/Hysj.Crypto.Tests/: AesGcmTests.cs  DoubleRatchetTests.cs  HkdfHelper.cs  Hysj.Crypto.Tests.csproj  KyberKemTests.cs  OnionRoutingTests.cs  SealedSenderTests.cs  UnitTest1.cs  WipeTests.cs
(+142 files in other folders)
