[package]
name = "hysj-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
hysj-crypto = { path = "../crates/hysj-crypto" }
hysj-shared = { path = "../crates/hysj-shared" }
flutter_rust_bridge = "=2.9.0"
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
