[package]
name = "hysj-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hysj-api"
path = "src/main.rs"

[features]
default = ["vpn", "emojis", "files", "relay"]
vpn = ["dep:hysj-vpn"]
emojis = []
files = []
relay = []

[dependencies]
hysj-shared = { path = "../hysj-shared" }
hysj-crypto = { path = "../hysj-crypto" }
hysj-db = { path = "../hysj-db" }
hysj-messaging = { path = "../hysj-messaging" }
hysj-auth = { path = "../hysj-auth" }
hysj-vpn = { path = "../hysj-vpn", optional = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
