[package]
name = "hysj-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
hysj-shared = { path = "../hysj-shared" }
hysj-crypto = { path = "../hysj-crypto" }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
totp-rs = { workspace = true }
ed25519-dalek = { version = "2", features = ["rand_core"] }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
