[package]
name = "hysj-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
x25519-dalek = { version = "2", features = ["static_secrets"] }
curve25519-dalek = "4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
ml-kem = { version = "0.2", features = ["std"] }

[dev-dependencies]
