[package]
name = "hysj-messaging"
version = "0.1.0"
edition = "2021"

[dependencies]
hysj-shared = { path = "../hysj-shared" }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
