[package]
name = "hysj-vpn"
version = "0.1.0"
edition = "2021"

[dependencies]
hysj-shared = { path = "../hysj-shared" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
x25519-dalek = { version = "2", features = ["static_secrets"] }
